Remove overlay's pointer events, no only has presence visibility-wise and doesn't interfere with mouse events on canvas. Correctly select and de-select objects when clicked on

--- a/app/assets/stylesheets/canv.scss
+++ b/app/assets/stylesheets/canv.scss
@@ -1,3 +1,7 @@
 #canv {
 	z-index: 0;
 }
+
+#overlay {
+	pointer-events: none;
+}
